html.css: убран body, добавлен b, strong
b, strong: т.к. FF3+, S4/5 и Chrome по умолчанию font-weight: bolder

--- a/css/html.css
+++ b/css/html.css
@@ -15,11 +15,6 @@ body {
 	height: 100%;
 }
 
-body {
-	color: #000;
-	font: normal 93.75%/1.4 Arial, sans-serif;
-}
-
 img {
 	border: 0;
 }
@@ -148,6 +143,12 @@ table td.vm {
 
 .table_fill {
 	width: 100%;
+}
+
+
+b,
+strong {
+    font-weight: bold;
 }
 
 
