behavior для .g-unselectable перенесен в main-ie.css

--- a/css/main-ie.css
+++ b/css/main-ie.css
@@ -17,3 +17,11 @@ textarea,
 select {
 	font-size: 100%;
 }
+
+
+.g-unselectable{
+	behavior: expression(
+		( this.onselectstart = function(){ return !(1+(' ' + this.className + ' ').indexOf(' g-unselectable ')) } ),
+		( this.style.behavior = null )
+	);
+}
